# fastapi_server

./: CREATE_TABLE.sql  README.md  config.local.toml  main.py  pyproject.toml
commons/models/: base_model.py  gmodel.py
commons/utils/: enums.py  gtime.py  singleton.py
config/: config.py  config_loader.py  config_models.py
crud/: auth_crud.py  quiz_crud.py
db/: database.py
middleware/: auth.py
models/: quiz.py
router/: router.py
router/v1/auth/: auth.py  protocol.py
router/v1/quiz/: protocol.py  quiz.py
router/v1/validator/: dependencies.py
services/: auth_service.py  quiz_service.py
