[tool.poetry]
name = "quiz-app"
version = "0.1.0"
description = "퀴즈 응시 시스템"
authors = ["MarineYang <didgudqo13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
asyncpg = "^0.27.0"  # 비동기 PostgreSQL 드라이버
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
pydantic = "^1.10.8"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 